tests/iter/iter.exp
Error: iter.js:7
  7: for (var k in a) {
                   ^ array literal. The right-hand side of a `for...in` statement must be an object, null or undefined.

Error: iter.js:8
  8:     foo(a[k]); // k is a string, which shouldn't be used for array access
             ^^^^ access of computed property/element. Element cannot be accessed with
  8:     foo(a[k]); // k is a string, which shouldn't be used for array access
               ^ string

Error: iter.js:22
 22: for (var n in (d = a)) {
                        ^ array literal. The right-hand side of a `for...in` statement must be an object, null or undefined.

Error: iter.js:23
 23:     foo(d[n]); // d is a string, which shouldn't be used for array access
             ^^^^ access of computed property/element. Element cannot be accessed with
 23:     foo(d[n]); // d is a string, which shouldn't be used for array access
               ^ string


Found 4 errors
